# INF3995-104

./: .gitattributes  .gitignore  README.md  compose.yaml  kill.sh  readme.md  start_script.sh
catkin_ws/: catkin_ws.code-workspace
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/server_communication_handler/: launch_identify_srv.h  launch_identify_srvRequest.h  launch_identify_srvResponse.h
catkin_ws/devel/lib/pkgconfig/: server_communication_handler.pc
catkin_ws/devel/lib/server_communication_handler/: server_communication_handler_node
catkin_ws/src/server_communication_handler/: CMakeLists.txt  package.xml
catkin_ws/src/server_communication_handler/launch/: turtlemimic.launch
catkin_ws/src/server_communication_handler/src/: communication_handler_node.cpp
catkin_ws/src/server_communication_handler/srv/: launch_identify_srv.srv
embedded/: Dockerfile  README
embedded/agilex_ws/DockerFuture/: setup_bash.sh
embedded/agilex_ws/devel/: .catkin
embedded/agilex_ws/src/battery/: CMakeLists.txt  package.xml
embedded/agilex_ws/src/environment_setting/: CMakeLists.txt  package.xml
embedded/agilex_ws/src/identification/: CMakeLists.txt
embedded/agilex_ws/src/launch/: limo_navigation_diff.launch  limo_navigation_rtabmap.launch
embedded/agilex_ws/src/launch_pkg/: CMakeLists.txt
embedded/agilex_ws/src/lifter_ctr/: CMakeLists.txt
embedded/agilex_ws/src/log_adapter/: package.xml
embedded/agilex_ws/src/map_republisher/: CMakeLists.txt  package.xml
embedded/agilex_ws/src/merge_map/: CMakeLists.txt  package.xml
embedded/agilex_ws/src/recovery_algo/: CMakeLists.txt  package.xml
embedded/agilex_ws/src/retour_base/: CMakeLists.txt  package.xml
embedded/agilex_ws/src/return_base/: CMakeLists.txt  package.xml
embedded/gz_sim_ws/: .gitignore
embedded/gz_sim_ws/devel/: .catkin  .rosinstall  local_setup.sh
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/: CMakeLists.txt  package.xml
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/action/: DistanceQuery.action  LaunchRobot.action  StopResumeExploration.action
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/config/: limo_four_diff_control.yaml
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/launch/: 3d.launch  explore_robot.launch  map_merge.launch  one_robot.launch  robot_nav_stack_setup.launch  sim.launch  sim_rosbrige_ser.launch  simulation.launch  simulation_env.launch
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/param/: gmapping_params.yaml  local_costmap_params.yaml  map_merge_params.yaml  planner.yaml
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/src/: battery_simulator.cpp  distance_calculator.cpp  simulation_manager_server.cpp
embedded/gz_sim_ws/src/limo/limo_gazebo_sim/worlds/: simulation.world  simulation2.world
embedded/robot_104_ws/: Dockerfile  entrypoint.sh
launch/: led_start.py
webApp/: compose.yaml  readme.md
webApp/back-end/: dockerfile  extensions.py  requirements.txt  robotfilepaths.txt  run.py
webApp/back-end/classes/: mission_room.py
webApp/back-end/controllers/: routes.py
webApp/back-end/database/: database_communication.py  database_configuration.py
webApp/back-end/env-pymongo-fastapi-crud/: pyvenv.cfg
webApp/back-end/services/: robot_controls.py  robot_simulation.py  robot_update.py  ros_utilities.py  socket_manager.py  socket_service.py
webApp/back-end/tests/: test_database_communication.py  test_mission_room.py  test_robot_controls.py  test_robot_simulation.py  test_robot_update.py  test_ros_utilities.py  test_routes.py  test_socket_manager.py  test_socket_service.py
webApp/front-end/: README.md  angular.json  dockerfile  karma.conf.js  package.json
webApp/front-end/src/: index.html
(+351 files in other folders)
