<?xml version="1.0"?>
<package>
  <name>limo_gazebo_sim</name>
  <version>0.0.1</version>
  <description>The limo_gazebo_sim package</description>

  <maintainer email="pengju.du@agilex.ai">agilex</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend> 
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>gazebo_msgs</build_depend>  

  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_dev</run_depend>
  <run_depend>gazebo_msgs</run_depend>    
  <run_depend>limo_description</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend> 
  
  <run_depend>gazebo</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
